@@ -1,3 +1,8 @@
+2002-02-10  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-window.c (yw_handle_url): show external URL's in
+	  external viewer. #67962
+
 2002-02-06  Alex Larsson  <alexl@redhat.com>
 
 	* src/yelp-util.c (yelp_util_extract_docpath_from_uri):
